<resources>

    <string name="app_name">CurrencyConverter1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_currency_converter">CurrencyConverterActivity</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="amount">Amount:</string>
    <string name="result">Result:</string>
    <string name="clearBtn">Clear</string>
    <string name="swapBtn">Swap</string>
    <string name="convertBtn">Convert</string>
    <string-array name="currency_type_from">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>BDT</item>
        <item>INR</item>
        <item>JPY</item>
    </string-array>
    
    <string-array name="currency_type_to">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>BDT</item>
        <item>INR</item>
        <item>JPY</item>
    </string-array>

</resources>